--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "qrcode": "^1.5.3",
+    "razorpay": "^2.9.2"
   }
 }
